some strange bug with word spacing on the last h1

--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,6 @@ body {
   line-height: 30px;
   font-size: 30px;
   letter-spacing: -1px;
-  word-spacing: -10px;
 }
 
 .kontakts > ul {
